--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   fretes-api:
     # IMPORTANTE: Altere a URL abaixo para o endereço do seu repositório no GitHub.
     # O Portainer usará isso para baixar e construir a API automaticamente.
-    # O '#main' no final especifica o branch. Mude se você usar um branch diferente.
+    # O '#main' no final especifica o branch. Mude se você usar um branch diferente (ex: #master).
     build:
       context: https://github.com/SEU_USUARIO/SEU_REPOSITORIO.git#main
       dockerfile: api/Dockerfile
@@ -16,20 +16,20 @@ services:
       - "3030:3000"
     
     # --- CONFIGURAÇÃO OBRIGATÓRIA ---
-    # Preencha as variáveis abaixo com os dados de conexão dos seus bancos de dados.
-    # Estes valores serão injetados no container da API de forma segura.
+    # As variáveis de ambiente (senhas, etc.) serão configuradas diretamente no Portainer.
+    # Deixe esta seção como está.
     environment:
       # Configurações da API
       - API_PORT=3000
 
       # Conexão com o Banco de Dados Principal (ODIN)
-      - DB_SERVER_ODIN=10.10.10.100
-      - DB_DATABASE_ODIN=Fretes
-      - DB_USER_ODIN=sa # <-- MUDE AQUI
-      - DB_PASSWORD_ODIN=#41nhAsa#@@2 # <-- MUDE AQUI
+      - DB_SERVER_ODIN=${DB_SERVER_ODIN}
+      - DB_DATABASE_ODIN=${DB_DATABASE_ODIN}
+      - DB_USER_ODIN=${DB_USER_ODIN}
+      - DB_PASSWORD_ODIN=${DB_PASSWORD_ODIN}
 
       # Conexão com o Banco de Dados de Consulta (ERP)
-      - DB_SERVER_ERP=consulta.flagcloud.com.br
-      - DB_DATABASE_ERP=flexx10071188
-      - DB_USER_ERP=SQL10071188 # <-- MUDE AQUI
-      - DB_PASSWORD_ERP=SQL2020/R@1nh@ # <-- MUDE AQUI
+      - DB_SERVER_ERP=${DB_SERVER_ERP}
+      - DB_DATABASE_ERP=${DB_DATABASE_ERP}
+      - DB_USER_ERP=${DB_USER_ERP}
+      - DB_PASSWORD_ERP=${DB_PASSWORD_ERP}
