--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: '3.8'
 
 services:
-  # --- SERVIÇO DE BACKEND (API) ---
   fretes-api:
     build:
-      context: https://github.com/henriquesergio1/Fretes.git#main
-      dockerfile: api/Dockerfile
+      context: ./api
+      dockerfile: Dockerfile
     container_name: fretes-api
     restart: unless-stopped
     ports:
+      # Mapeia a porta 3000 do container para a porta 3030 do seu servidor.
+      # Se a porta 3030 já estiver em uso no seu servidor, mude o primeiro número (ex: "3031:3000").
       - "3030:3000"
+    
+    # As variáveis de ambiente (senhas, etc.) devem ser configuradas diretamente
+    # no Portainer ou em um arquivo .env na mesma pasta do docker-compose.
     environment:
       - API_PORT=3000
       - DB_SERVER_ODIN=${DB_SERVER_ODIN}
@@ -21,15 +25,15 @@ services:
       - DB_USER_ERP=${DB_USER_ERP}
       - DB_PASSWORD_ERP=${DB_PASSWORD_ERP}
 
-  # --- SERVIÇO DE FRONTEND (INTERFACE WEB) ---
   fretes-frontend:
     build:
-      context: https://github.com/henriquesergio1/Fretes.git#main
-      dockerfile: Dockerfile.frontend
+      context: . # Constrói a imagem a partir da raiz do projeto
+      dockerfile: Dockerfile
     container_name: fretes-frontend
     restart: unless-stopped
     ports:
-      # Expõe a interface do aplicativo na porta 8080 do seu servidor.
+      # Mapeia a porta 80 do container para a porta 8080 do servidor.
+      # Acesse o frontend em http://[IP_DO_SERVIDOR]:8080
       - "8080:80"
     depends_on:
       - fretes-api
