--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,17 +1,33 @@
-# Estágio 1: Build (não necessário para este projeto estático)
+# Estágio 1: Build
+# Usa uma imagem Node.js para instalar o esbuild e compilar o código.
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+# Instala o esbuild, um bundler extremamente rápido.
+RUN npm install esbuild
+
+# Copia todo o código-fonte da aplicação para o container.
+COPY . .
+
+# Executa o esbuild para compilar o index.tsx e todas as suas dependências
+# em um único arquivo JavaScript, que será colocado em /dist/bundle.js.
+RUN ./node_modules/.bin/esbuild index.tsx --bundle --outfile=dist/bundle.js --minify --loader:.tsx=tsx
 
 # Estágio 2: Produção
-FROM nginx:alpine
+# Usa uma imagem Nginx leve para servir os arquivos estáticos.
+FROM nginx:alpine AS production
 
-# Copia o arquivo de configuração personalizado do Nginx para a imagem.
-# O nome do arquivo no container deve ser default.conf para sobrescrever a configuração padrão.
+# Copia o arquivo de configuração personalizado do Nginx.
 COPY nginx.conf.txt /etc/nginx/conf.d/default.conf
 
-# Copia todos os arquivos da aplicação (HTML, TSX, JS, etc.) para o diretório web do Nginx.
-COPY . /usr/share/nginx/html
+# Copia APENAS os arquivos necessários do estágio de build para o diretório web do Nginx.
+# Isso resulta em uma imagem final muito menor e mais segura.
+COPY --from=builder /app/dist/bundle.js /usr/share/nginx/html/dist/bundle.js
+COPY index.html /usr/share/nginx/html/index.html
 
-# Expõe a porta 80, que é a porta padrão do Nginx.
+# Expõe a porta 80.
 EXPOSE 80
 
-# Comando para iniciar o Nginx quando o container for executado.
+# Comando para iniciar o Nginx.
 CMD ["nginx", "-g", "daemon off;"]
