--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --serve --servedir=.",
     "build": "mkdir -p dist && npm run build:css && npm run build:js",
     "build:css": "tailwindcss -i ./tailwind-input.css -o ./dist/output.css --minify",
     "build:js": "esbuild index.tsx --bundle --outfile=dist/bundle.js --minify --loader:.tsx=tsx --loader:.ts=ts"
