--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --serve --servedir=.",
+    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:process.env.NODE_ENV=\\\"'development'\\\" --serve --servedir=.",
     "build": "mkdir -p dist && npm run build:css && npm run build:js",
     "build:prod": "mkdir -p dist && npm run build:css && esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:process.env.NODE_ENV=\\\"'production'\\\"",
     "build:css": "tailwindcss -i ./tailwind-input.css -o ./dist/output.css --minify",
