--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:process.env.NODE_ENV=\\\"'development'\\\" --serve --servedir=.",
+    "dev": "esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:__USE_MOCK__=true --serve --servedir=.",
     "build": "mkdir -p dist && npm run build:css && npm run build:js",
-    "build:prod": "mkdir -p dist && npm run build:css && esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:process.env.NODE_ENV=\\\"'production'\\\"",
+    "build:prod": "mkdir -p dist && npm run build:css && esbuild index.tsx --bundle --outfile=dist/bundle.js --loader:.tsx=tsx --loader:.ts=ts --define:__USE_MOCK__=false",
     "build:css": "tailwindcss -i ./tailwind-input.css -o ./dist/output.css --minify",
     "build:js": "esbuild index.tsx --bundle --outfile=dist/bundle.js --minify --loader:.tsx=tsx --loader:.ts=ts"
   },
