--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.8'
 
 services:
@@ -16,6 +17,8 @@ services:
     # no Portainer ou em um arquivo .env na mesma pasta do docker-compose.
     environment:
       - API_PORT=3000
+      # Segredo para assinatura de Tokens (Login e Licença). Mude isso em produção!
+      - JWT_SECRET=${JWT_SECRET:-fretes-secret-key-change-in-prod}
       - DB_SERVER_ODIN=${DB_SERVER_ODIN}
       - DB_DATABASE_ODIN=${DB_DATABASE_ODIN}
       - DB_USER_ODIN=${DB_USER_ODIN}
