feat: Update application version and database configuration
Updates the application version to v1.2.46 and refactors database connection logic in the API.

The API now prioritizes `_FRETE` environment variables for database connections and includes a fallback to `_ODIN` variables for backward compatibility with existing Portainer configurations. This change ensures smoother transitions and maintains compatibility for users running older setups.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,4 @@
 
-
-
 version: '3.8'
 
 services:
@@ -22,11 +20,17 @@ services:
       # Segredo para assinatura de Tokens (Login e Licença). Mude isso em produção!
       - JWT_SECRET=${JWT_SECRET:-fretes-secret-key-change-in-prod}
       
-      # Conexão Principal (Banco Fretes)
+      # Conexão Principal (Banco Fretes) - Padrão Novo
       - DB_SERVER_FRETE=${DB_SERVER_FRETE}
       - DB_DATABASE_FRETE=${DB_DATABASE_FRETE}
       - DB_USER_FRETE=${DB_USER_FRETE}
       - DB_PASSWORD_FRETE=${DB_PASSWORD_FRETE}
+
+      # Fallback: Mantendo variáveis antigas (ODIN) para não quebrar configs salvas no Portainer
+      - DB_SERVER_ODIN=${DB_SERVER_ODIN}
+      - DB_DATABASE_ODIN=${DB_DATABASE_ODIN}
+      - DB_USER_ODIN=${DB_USER_ODIN}
+      - DB_PASSWORD_ODIN=${DB_PASSWORD_ODIN}
       
       # Conexão Legada (ERP)
       - DB_SERVER_ERP=${DB_SERVER_ERP}
